# odeint-talks

./: README
2011_taylor_ad/: talk.tex
2012_cppnow/: conclusion.tex  introduction.tex  old_stuff.tex  talk.tex  technical_details.tex  tutorial.tex
2012_cppnow/demo/: pendulum1.cpp  phase_compacton_lattice.cpp
2012_cppnow/examples/: Jamroot  bowl.cpp  harmonic_oscillator.cpp  nonlinear_pendulum.cpp  pendulum1.cpp  phase_compacton_lattice.cpp  vdp.cpp
2012_cppnow/snippets/: Jamroot  example1_b.cpp
2012_cppug/: conclusion.tex  introduction.tex  talk.tex  technical_details.tex  tutorial.tex
2012_cppug/snippets/: example1.cpp  example1_a.cpp  example2_compileable.cpp  example3_thrust.cpp  example4_lorenz_taylor.cpp
2012_meeting_cpp/: .directory  conclusion.tex  cppnow2012.kilepr  details.tex  introduction.tex  mtl.tex  talk.tex  tutorial.tex
2012_meeting_cpp/demo/: Jamroot
2012_meeting_cpp/examples/: Jamroot  pendulum1.cpp  vdp.cpp  vexcl_pendulum.cpp
2012_meeting_cpp/snippets/: example2.cpp
2013_fosdem/: CMakeLists.txt  talk.tex
2013_fosdem/overview/: odeint.tex
2013_fossdem/: odeint.tex
2013_poster/: beamerthemePotsdamPoster.sty  odeint_poster.tex
2014_cppug_berlin/: generic_talk.tex
generic_stepper/: generic_stepper.tex
